# peek-tool

./: .gitignore  README.md  ROADMAP.md  fastmcp_setup_guide.md  pyproject.toml
src/peek_tool/: __init__.py  cli.py  mcp_server.py
src/peek_tool/cli/: __init__.py  app.py  main.py
src/peek_tool/cli/commands/: __init__.py  inspect_command.py  mcp_command.py
src/peek_tool/cli/commands/inspect/: __init__.py  command.py  utils.py
src/peek_tool/cli/commands/mcp/: __init__.py  init.py  server.py  utils.py
src/peek_tool/core/: __init__.py  base.py  docstring_utils.py  json_inspector.py  python_inspector.py
src/peek_tool/formatters/: __init__.py  base.py  base_text.py  text.py
src/peek_tool/formatters/docstring/: __init__.py  base.py  text.py
src/peek_tool/formatters/json/: __init__.py  base.py  text.py
src/peek_tool/formatters/python/: __init__.py  base.py  text.py
src/peek_tool/mcp_server/: __init__.py  __main__.py  app.py  prompts.py  resources.py  tools.py
src/peek_tool/models/: __init__.py  api_element.py  command_options.py  inspection_result.py  json_element.py  python_element.py
