[project]
name = "peek-tool"
version = "0.1.0"
description = "A powerful Python module inspection and API discovery tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fredrik Angelsen", email = "fredrikangelsen@gmail.com" }]
dependencies = [
    "chromadb>=1.0.7",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
peek = "peek_tool.cli:app"
peek-mcp = "peek_tool.mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "peek-tool",
    "ruff>=0.11.7",
]

[tool.uv.sources]
peek-tool = { workspace = true }
