[project]
name = "peek-tool"
version = "0.1.0"
description = "A powerful Python module inspection and API discovery tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fredrik Angelsen", email = "fredrikangelsen@gmail.com" }]
dependencies = [
    "jinja2>=3.1.6",
    "json5>=0.12.0",
    "mcp[cli]>=1.6.0",
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
    "typer>=0.15.3",
]

[project.scripts]
peek = "peek_tool.cli:app"
peek-mcp = "peek_tool.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["peek-tool", "ruff>=0.11.7"]

[tool.uv.sources]
peek-tool = { workspace = true }
